# file-cleaners

./: CHANGELOG.md  README.md  SECURITY.md
.github/workflows/: minitest.yml  pypi--release.yml  ruby--ci.yml  ruby.yml  rubygem--ci.yml
PyPI/: README.md  pyproject.toml
PyPI/src/spreen_clean/: __init__.py  application.py  cli.py
PyPI/test/: conftest.py  test_application.py  test_cli.py
RubyGem/: .rubocop.yml  README.md  Rakefile  spreen-clean.gemspec
RubyGem/exe/: file-clean
RubyGem/lib/: spreen-clean.rb  spreen_clean.rb
RubyGem/lib/spreen_clean/: application.rb  cli.rb  version.rb
RubyGem/test/: application_test.rb  cli_test.rb
python/: README.md  main.py  tasks.py
python/src/: application.py
python/test/: test_application.py
ruby/: .rubocop_todo.yml  README.md  Rakefile  main.rb
ruby/lib/spreen_clean/: cli.rb
ruby/src/: application.rb
ruby/test/: application_test.rb
